# release-checklist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
checklists/: high-risk.md  low-risk.md  medium-risk.md
configs/: high-risk-example.yaml  medium-risk-example.yaml
src/: check_release.py
src/airc/: cli.py  validator.py
tests/: test_validator.py
