[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-release-checklist"
version = "0.1.0"
description = "A CLI tool for validating AI/ML system release readiness in regulated industries"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sima Bagheri", email = "bagherisima@gmail.com" }
]
keywords = [
    "ai-governance", "release-readiness", "mlops", "responsible-ai",
    "nist-ai-rmf", "regulated-industries", "machine-learning", "llm-governance"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/simaba/ai-release-readiness-checklist"
Documentation = "https://simaba.github.io/ai-release-readiness-checklist"
Repository = "https://github.com/simaba/ai-release-readiness-checklist"
"Bug Tracker" = "https://github.com/simaba/ai-release-readiness-checklist/issues"

[project.scripts]
airc = "airc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
